# Prog3

./: .gitignore  CMakeLists.txt  README on Windows.md  README.md  README_WINDOWS.md  main.cpp
kanban-board-app/: angular.json
kanban-board-service/: .gitignore  CMakeLists.txt
kanban-board-service/script/: conftest.py  readme.md  requirements.txt  test_service.py
kanban-board-service/src/: Application.cpp  CMakeLists.txt  Service.cpp
kanban-board-service/src/Api/: Endpoint.cpp  Endpoint.hpp
kanban-board-service/src/Controller/: BoardManager.cpp  BoardManager.hpp
kanban-board-service/src/Model/: Board.cpp  Board.hpp
kanban-board-service/src/Repository/: RepositoryIf.hpp
kanban-board-service/src/Repository/DatabaseMock/: BoardRepository.cpp  BoardRepository.hpp
kanban-board-service/src/Repository/MongoDB/: BoardRepository.cpp  BoardRepository.hpp
kanban-board-service/src/Repository/SQLite/: BoardRepository.cpp  BoardRepository.hpp
src/: Application.cpp  CMakeLists.txt
src/BusinessLogic/: BoardManager.cpp  BoardManager.hpp
src/Controller/: BoardManager.cpp  BoardManager.hpp  Endpoint.cpp  Endpoint.hpp
src/Repository/: BoardDataAccess.cpp  BoardDataAccess.hpp  DataAccessIf.hpp  Repository.hpp  RepositoryIf.hpp
src/Repository/DatabaseMock/: BoardRepository.cpp  BoardRepository.hpp
src/Repository/FakeDatabase/: BoardDataAccess.cpp  BoardDataAccess.hpp
src/Repository/Model/: Board.cpp  Board.hpp
src/Repository/MongoDB/: BoardRepository.cpp  BoardRepository.hpp
